--- a/Screening/HyMod/Hymod.ipynb
+++ b/Screening/HyMod/Hymod.ipynb
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "import plotly.graph_objs as go\n",
     "from plotly.subplots import make_subplots\n",
-    "from ipywidgets import widgets\n",
+    "from ipywidgets import widgets, Layout\n",
     "\n",
     "from util.HyMOD import hymod"
    ]
@@ -250,7 +250,7 @@
     "                            value=50, step = 1,\n",
     "                            description = 'c_max: Maximum soil moisture storage capacity (mm)',\n",
     "                            continuous_update=False,\n",
-    "                          style = {'description_width': '350px'} ,layout={'width': '700px'})\n",
+    "                          style = {'description_width': '350px'} ,layout={'width': '600px'})\n",
     "c_max.observe(update_figure,names = 'value')"
    ]
   },
@@ -272,7 +272,7 @@
     "                           value=1, step = 0.01,\n",
     "                           description = 'beta: Degree of spatial variability of the c_max',\n",
     "                           continuous_update=False,\n",
-    "                          style = {'description_width': '350px'} ,layout={'width': '700px'})\n",
+    "                          style = {'description_width': '350px'} ,layout={'width': '600px'})\n",
     "beta.observe(update_figure,names = 'value')"
    ]
   },
@@ -294,7 +294,7 @@
     "                            value=0.5, step = 0.01, \n",
     "                            description = 'alpha: Factor distributing slow (s) and quick (q) flows (q/s)',\n",
     "                            continuous_update=False,\n",
-    "                          style = {'description_width': '350px'} ,layout={'width': '700px'})\n",
+    "                          style = {'description_width': '350px'} ,layout={'width': '600px'})\n",
     "alpha.observe(update_figure,names = 'value')"
    ]
   },
@@ -316,7 +316,7 @@
     "                          value=0.05, step = 0.01, \n",
     "                          description = 'K_s: Fractional discharge of slow release reservoir',\n",
     "                          continuous_update=False,\n",
-    "                          style = {'description_width': '350px'} ,layout={'width': '700px'})\n",
+    "                          style = {'description_width': '350px'} ,layout={'width': '600px'})\n",
     "K_s.observe(update_figure,names = 'value')"
    ]
   },
@@ -338,7 +338,7 @@
     "                          value=0.55, step = 0.01,\n",
     "                          description = 'K_q: Fractional discharge of quick release reservoir',\n",
     "                          continuous_update=False,\n",
-    "                          style = {'description_width': '350px'} ,layout={'width': '700px'})\n",
+    "                          style = {'description_width': '350px'} ,layout={'width': '600px'})\n",
     "K_q.observe(update_figure,names = 'value')"
    ]
   },
@@ -395,27 +395,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.3914438913229623"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(Q_q_sim)\n",
-    "np.mean(Q_s_sim)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -424,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +411,8 @@
     "obs_hyd = go.Scatter(x=dates, y=Q_obs, name='obs hyd')\n",
     "fig_hyd = go.FigureWidget(data   = [obs_hyd,sim_hyd],\n",
     "                          layout = go.Layout(xaxis = dict(title = 'date'),\n",
-    "                                             yaxis = dict(range = [0,20],title = 'Q')))"
+    "                                             yaxis = dict(range = [0,20],title = 'Q'),\n",
+    "                                             height = 300,width=600))"
    ]
   },
   {
@@ -444,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +497,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e001ff1bcbdd43a8b6b66aceeb91ad26",
+       "model_id": "8e3b2d1cde184286a6445ac8710d1c59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -527,19 +507,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\andro\\OneDrive - University of Bristol\\AndresFrancesca\\mat\\Jupyter notebooks\\SAFE-Notebooks\\Screening\\HyMod\\util\\HyMOD.py:42: ComplexWarning:\n",
+      "\n",
+      "Casting complex values to real discards the imaginary part\n",
+      "\n",
+      "C:\\Users\\andro\\OneDrive - University of Bristol\\AndresFrancesca\\mat\\Jupyter notebooks\\SAFE-Notebooks\\Screening\\HyMod\\util\\HyMOD.py:45: ComplexWarning:\n",
+      "\n",
+      "Casting complex values to real discards the imaginary part\n",
+      "\n",
+      "C:\\Users\\andro\\OneDrive - University of Bristol\\AndresFrancesca\\mat\\Jupyter notebooks\\SAFE-Notebooks\\Screening\\HyMod\\util\\HyMOD.py:46: ComplexWarning:\n",
+      "\n",
+      "Casting complex values to real discards the imaginary part\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "widgets.VBox([widgets.VBox([c_max,beta,alpha,K_s, K_q]),\n",
-    "              widgets.HBox([fig_sto,fig_flo]),fig_hyd])"
+    "slider_box_layout = Layout(border='solid',width='650px')\n",
+    "hbox_layout = Layout(display='inline-flex',height='330px')\n",
+    "vbox_layout = Layout(align_items = 'center')\n",
+    "widgets.VBox([widgets.VBox([c_max,beta,alpha,K_s, K_q],layout=slider_box_layout),\n",
+    "              widgets.HBox([fig_sto,fig_flo],layout=hbox_layout),fig_hyd],layout = vbox_layout)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
