--- a/Screening/Screening.ipynb
+++ b/Screening/Screening.ipynb
@@ -94,12 +94,12 @@
    "metadata": {},
    "source": [
     "### Step 2: Define and setup the model\n",
-    "<left><img src=\"HyMOD_diagram_simple.png\" width=\"700px\">\n",
+    "<left><img src=\"util/HyMOD_diagram_simple.png\" width=\"700px\">\n",
     "HYMOD is a parsimonious rainfall-runoff model based based on the theory of runoff yeild under infiltration excess. The model structure is illustrated on the figure below.\n",
     "\n",
     "The basin is composed by a group of storages that follow a cumulative distribution F(C) where C is the value of the storage which can vary from 0 to Cmax.\n",
     "\n",
-    "<left><img src=\"HyMOD_diagram.png\" width=\"700px\">\n",
+    "<left><img src=\"util/HyMOD_diagram.png\" width=\"700px\">\n",
     "\n",
     "Define: \n",
     "- the input factors whose influence is to be analysed with GSA,\n",
