--- a/Screening/HyMod/Hymod.ipynb
+++ b/Screening/HyMod/Hymod.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,10 +470,10 @@
     "flo_layout = go.Layout(width=650, height=450,plot_bgcolor='white',showlegend=False,\n",
     "                       xaxis = dict(range = [0,22],showticklabels=False),\n",
     "                       yaxis = dict(range = [0,10],showticklabels=False),\n",
-    "                       annotations = [dict(x = 2, y = 9, text = 'quick EC',showarrow=False),\n",
+    "                       annotations = [dict(x = 2, y = 9, text = 'quick effective rain',showarrow=False),\n",
     "                                      dict(x = 10, y = 9, text = 'quick reservoir',showarrow=False),\n",
     "                                      dict(x = 18, y = 9, text = 'quick flow',showarrow=False),\n",
-    "                                      dict(x = 2, y = 4, text = 'slow EC',showarrow=False),\n",
+    "                                      dict(x = 2, y = 4, text = 'slow effective rain',showarrow=False),\n",
     "                                      dict(x = 10, y = 4, text = 'slow reservoir',showarrow=False),\n",
     "                                      dict(x = 18, y = 4, text = 'slow flow',showarrow=False)])\n",
     "\n",
@@ -491,13 +491,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e3b2d1cde184286a6445ac8710d1c59",
+       "model_id": "772caa48bb2a4017af8a9c7c01f6e8e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,24 +507,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\andro\\OneDrive - University of Bristol\\AndresFrancesca\\mat\\Jupyter notebooks\\SAFE-Notebooks\\Screening\\HyMod\\util\\HyMOD.py:42: ComplexWarning:\n",
-      "\n",
-      "Casting complex values to real discards the imaginary part\n",
-      "\n",
-      "C:\\Users\\andro\\OneDrive - University of Bristol\\AndresFrancesca\\mat\\Jupyter notebooks\\SAFE-Notebooks\\Screening\\HyMod\\util\\HyMOD.py:45: ComplexWarning:\n",
-      "\n",
-      "Casting complex values to real discards the imaginary part\n",
-      "\n",
-      "C:\\Users\\andro\\OneDrive - University of Bristol\\AndresFrancesca\\mat\\Jupyter notebooks\\SAFE-Notebooks\\Screening\\HyMod\\util\\HyMOD.py:46: ComplexWarning:\n",
-      "\n",
-      "Casting complex values to real discards the imaginary part\n",
-      "\n"
-     ]
     }
    ],
    "source": [
