--- a/Mapping/DICE model/DICE model.ipynb
+++ b/Mapping/DICE model/DICE model.ipynb
@@ -109,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Population slider\n",
     "pop_param = widgets.FloatSlider(min = 0.00,\n",
-    "                                 max = 1,\n",
+    "                                 max = 0.25,\n",
     "                                 value = 0.13, step = 0.01,\n",
     "                                 description = 'Population growth factor',\n",
     "                                 continuous_update=True,\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,13 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop_trace  = go.Scatter(x=time_range, y=population, name='population', marker_color = 'blue')\n",
-    "temp_trace = go.Scatter(x=time_range, y=temp, name='temp above preindustrial', marker_color = 'red',xaxis = \"x\", yaxis =\"y2\")\n",
-    "clim_trace = go.Scatter(x=time_range, y=rel_clim_damage, name='relative climate cost', marker_color = 'brown',xaxis = \"x\", yaxis =\"y3\")\n",
+    "pop_trace  = go.Scatter(x=time_range, y=population, name='population', marker_color = 'blue', fill='tozeroy')\n",
+    "temp_trace = go.Scatter(x=time_range, y=temp, name='temp above preindustrial', marker_color = 'red',xaxis = \"x\", yaxis =\"y2\", fill='tozeroy')\n",
+    "clim_trace = go.Scatter(x=time_range, y=rel_clim_damage, name='relative climate cost', marker_color = 'brown',xaxis = \"x\", yaxis =\"y3\", fill='tozeroy')\n",
     "\n",
     "layout = go.Layout(height=700,\n",
     "    yaxis  = dict(range = [6000,12000],title = 'millions',domain=[0,0.30]),\n",
@@ -322,20 +322,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b69c76ac82194c989672c610d2b67aa2",
+       "model_id": "fa07faea8d7f4668b1a83918c959067c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'marker': {'color': 'brown'},\n",
-       "              'name': 'relative clim…"
+       "    'data': [{'fill': 'tozeroy',\n",
+       "              'marker': {'color': 'brown'},\n",
+       "   …"
       ]
      },
      "metadata": {},
