--- a/Screening/Hydrological_model/GSA_Hydrological_Model.ipynb
+++ b/Screening/Hydrological_model/GSA_Hydrological_Model.ipynb
@@ -17,16 +17,16 @@
     "## Hydrological processes in a river section\n",
     "This animated image represents the main hydrological processes that occur in one of the river sections. \n",
     "\n",
-    "<left><img src=\"util/Rain_runoff_diagram7.gif\" width=\"700px\">\n",
+    "<left><img src=\"util/rain_runoff_diagram7.gif\" width=\"700px\">\n",
     "    \n",
     "## Diagram of the hydrological model\n",
     "\n",
-    "<left><img src=\"util/HyMOD_diagram_simple4.gif\" width=\"1000px\">\n",
+    "<left><img src=\"util/hymod_diagram_simple4.gif\" width=\"1000px\">\n",
     "\n",
     "## Model parameters\n",
     "To represent the hydrological processes the model use mathematical equations that are as a function of several parameters.\n",
     "\n",
-    "<left><img src=\"util/Rain_runoff_param.png\" width=\"500px\">\n",
+    "<left><img src=\"util/rain_runoff_param.png\" width=\"500px\">\n",
     "    \n",
     "Usually the value of the model parameters are unknown and ideally, to obtain a good representation of the hydrological processes occuring in the catchment, we should measure in-situ their values. However, this data is generally not available and it is difficult and expensive to measure. \n",
     "\n",
@@ -47,7 +47,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d65150a759684d14b00c213050b582ff",
+       "model_id": "ad2206aef23044de89c6304ec7e2299d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f33887fc20d74b6fb8a955eb1c7e5e87",
+       "model_id": "216cd1922c1648c2b5f6770f17c1050b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fd994cea9004c62a01743c3021f31b9",
+       "model_id": "5d3a5e834ca6406eb28385127bc0673a",
        "version_major": 2,
        "version_minor": 0
       },
