--- a/Screening/Hydrological_model/GSA_Hydrological_Model.ipynb
+++ b/Screening/Hydrological_model/GSA_Hydrological_Model.ipynb
@@ -30,11 +30,11 @@
     "    \n",
     "Usually the value of the model parameters are unknown and ideally, to obtain a good representation of the hydrological processes occuring in the catchment, we should measure in-situ their values. However, this data is generally not available and it is difficult and expensive to measure. \n",
     "\n",
-    "Imagine that have a limited budget to make in-situ measurements and we can measure two of the paramater values. Therefore, we need to carefully select which ones we would like to measure. \n",
+    "Imagine that have a limited budget to make in-situ measurements and we can measure two of the paramater values. Therefore, we need to carefully select which ones we would like to measure. The rest of the parameters will be obtained by a method called calibration.\n",
     "    \n",
     "## Calibration of the model parameters\n",
     "\n",
-    "To tailor a hydrological model to a particular catchment, model calibration is required. Model calibration is the process of adjusting the model parameters to obtain a representation of the catchment under study that satisfies pre-agreed criteria. Normally, calibration of a hydrological model aims to improve the fit of the simulated river flow to observed river flow and involves running the model many times under different combinations of the parameter values, until a combination is found that minimise the differences between simulated and observed flows. \n",
+    "To tailor a hydrological model to a particular catchment we need to measure the value of the model parameters. When this data is not available, model calibration is required. Model calibration is the process of adjusting the model parameters to obtain a representation of the catchment under study that satisfies pre-agreed criteria. Normally, calibration of a hydrological model aims to improve the fit of the simulated river flow to observed river flow and involves running the model many times under different combinations of the parameter values, until a combination is found that minimise the differences between simulated and observed flows. \n",
     "\n",
     "Let's try to calibrate the model manually, that is, changing the parameter values one at the time and looking at the effects induced in the model predictions by means of an interactive plot of the simulated hydrograph. The objective is to obtain a good fit of the simulated hydrograph to the observed one."
    ]
