Major changes: Hydrological model and Predator-prey model
Hydrological model and Predator-prey model modified after last meeting's comments

--- a/Mapping/Flu model/Flu_model.ipynb
+++ b/Mapping/Flu model/Flu_model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The flu model\n",
     "\n",
-    "<left><img src=\"util/scooby_doo.gif\" width=\"400px\">\n",
+    "<left><img src=\"util/flu_image.png\" width=\"400px\">\n",
     "    \n",
     "The flu model is a simple mathematical description of the spread of a flu in a small town. The model divides the population of N individuals into four \"compartments\" which may vary as a function of time, t:\n",
     "\n",
