--- a/Predator_prey_model/GSA_predator_prey_model.ipynb
+++ b/Predator_prey_model/GSA_predator_prey_model.ipynb
@@ -12,13 +12,13 @@
     "In this Notebook we will try to understand the evolution and interactions in a predator-prey habitat and how to reach the equilibrium of the prey and predator populations.For this purpose we will use a predator-prey model and Global Sensitivity Analysis (GSA).\n",
     "\n",
     "# What is a predator-prey model?\n",
-    "A predator-prey model is a simplified representation of a predator-prey habitat. We consider two species. One species, the prey, is the primary source of food source for the other, the predator. The predator-prey food chain persists over time thanks to a **negative feedback loop**, i.e. when the product of a reaction leads to a decrease in that reaction. When predators eat preys, they reduce their population but this drop in the predators food source will soon cause the predator population to decline. This will also reduce the predation rate allowing the prey population to increase again. This cycle creates an up and down wavelike pattern that maintain a long-term equilibrium.\n",
+    "A predator-prey model is a simplified representation of a predator-prey habitat. We consider two species. One species, the prey, is the primary source of food source for the other, the predator. The predator-prey food chain persists over time thanks to a **negative feedback loop**, i.e. when the product of a reaction leads to a decrease in that reaction *(Ref. 1)*. When predators eat preys, they reduce their population but this drop in the predators food source will soon cause the predator population to decline. This will also reduce the predation rate allowing the prey population to increase again. This cycle creates an up and down wavelike pattern that maintain a long-term equilibrium.\n",
     "\n",
     "<left><img src=\"util/predator_prey_equil.gif\" width=\"700px\">\n",
     "\n",
     "Now imagine that in a given natural habitat we would like to introduce a predator species to maintain the population of rabbits stable. For this purpose, we can select the initial number and species of predators as well as the initial number of rabbits. We could do this by trial and error by introducing different predator species and then monitoring the evolution of the populations but this will likely require high amounts of time, money and animal lives. But what if we could we simulate the habitat and its evolution on a computer using mathematical equations? \n",
     "\n",
-    "A predator-prey model *(Ref. 1)* is a mathematical model (set of equations) describing the interactions that occur in a predator-prey habitat as a function of various parameters. These model parameters describe the characteristics of the habitat ultimately enabling the estimation of the evolution in time of the predator and prey populations. The parameters of our predator-prey model are the following:\n",
+    "A predator-prey model *(Ref. 2)* is a mathematical model (set of equations) describing the interactions that occur in a predator-prey habitat as a function of various parameters. These model parameters describe the characteristics of the habitat ultimately enabling the estimation of the evolution in time of the predator and prey populations. The parameters of our predator-prey model are the following:\n",
     "\n",
     "- Predator initial population: initial number of predator individuals\n",
     "- Predator attack rate: number of times that a predator sucessfully attacks (resulting in a kill) per week\n",
@@ -68,7 +68,7 @@
     "In order to facilitate the search for an optimal parameter combination we can apply Global Sensitivity Analysis (GSA). In this case, GSA can help to identify what parameters in our model have a relevant influence in the model results and what parameters can be neglected.\n",
     "\n",
     "## Plot sensitivity indices and identify non-influential parameters\n",
-    "By applying GSA *(Ref. 2)* we obtain a sensitivity index for each model parameter that measures the relative influence of the parameter on the equilibrium error. Being the influence lower as the sensitivity index decreases. With GSA we can also obtain an influence threshold value for the sensitivity index. If the index of a parameter is below the threshold, then the parameter can be considered as uninfluential *(Ref. 3)*. Now run the cell below to obtain the sensitivity indices and the influence threshold (black dashed line)."
+    "By applying GSA *(Ref. 3)* we obtain a sensitivity index for each model parameter that measures the relative influence of the parameter on the equilibrium error. Being the influence lower as the sensitivity index decreases. With GSA we can also obtain an influence threshold value for the sensitivity index. If the index of a parameter is below the threshold, then the parameter can be considered as uninfluential *(Ref. 4)*. Now run the cell below to obtain the sensitivity indices and the influence threshold (black dashed line)."
    ]
   },
   {
@@ -186,9 +186,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. [Predator-prey model - Hoppensteadt, F. (2006)](http://www.scholarpedia.org/article/Predator-prey_model)\n",
-    "2. [PAWN method - Pianosi and Wagener (2018)](https://doi.org/10.1016/j.envsoft.2018.07.019)\n",
-    "3. [Global Sensitivity Analysis . The primer - Saltelli et al. (2008)](http://www.andreasaltelli.eu/file/repository/A_Saltelli_Marco_Ratto_Terry_Andres_Francesca_Campolongo_Jessica_Cariboni_Debora_Gatelli_Michaela_Saisana_Stefano_Tarantola_Global_Sensitivity_Analysis_The_Primer_Wiley_Interscience_2008_.pdf) "
+    "1. [Feedback loops: How nature gets its rhythms - Anje-Margriet Neutel](https://www.youtube.com/watch?v=inVZoI1AkC8&t=2s)\n",
+    "2. [Predator-prey model - Hoppensteadt, F. (2006)](http://www.scholarpedia.org/article/Predator-prey_model)\n",
+    "3. [PAWN method - Pianosi and Wagener (2018)](https://doi.org/10.1016/j.envsoft.2018.07.019)\n",
+    "4. [Global Sensitivity Analysis . The primer - Saltelli et al. (2008)](http://www.andreasaltelli.eu/file/repository/A_Saltelli_Marco_Ratto_Terry_Andres_Francesca_Campolongo_Jessica_Cariboni_Debora_Gatelli_Michaela_Saisana_Stefano_Tarantola_Global_Sensitivity_Analysis_The_Primer_Wiley_Interscience_2008_.pdf) "
    ]
   },
   {
