--- a/Hydrological_model/GSA_Hydrological_Model.ipynb
+++ b/Hydrological_model/GSA_Hydrological_Model.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*This is a Jupyter Notebook. It is an interactive document that contains both rich text elements such as figures, links, equations, etc. and executable code (in this case Python code) contained in cells.\n",
-    "**Instructions:** You can run the notebook document step-by-step (execute one cell a time) by pressing shift + enter or\n",
-    "you can run the whole notebook in a single step by clicking on the menu Cell -> Run All.*\n",
+    "*This is a Jupyter Notebook. It is an interactive document that contains both rich text elements such as figures, links, equations, etc. and executable code - in this case Python code (the grey boxes).\n",
+    "**How to use a Jupyter Notebook**: You can execute the blocks of code one at the time by placing the mouse in the grey box and pressing shift + enter - an asterisk will appear in the brackets at the top left of the box while the code is being exectued (this may take few seconds) and turns into a number when the eection is over. Alternatively, you can run all the code in the Notebook in a single step by clicking on the menu Cell -> Run All.*\n",
     "\n",
-    "# What parameters are not important in our model?\n",
-    "In this Notebook we will apply Global Sensitivity Analysis (GSA) to identify the parameters in a model, if any, which have a negligible influence on the model results. In this way, we can reduce the number of parameters and hence the time and money that we need to invest to improve our model. In this example we will apply GSA to a simple hydrological model.\n",
+    "# What are the most important parameters in a mathematical model?\n",
+    "Mathematical models often encompass a large number of parameters. The value of these parameters for a particular application are decided by the modeller based on information about the quantities that the parameters represent (for example, measurements from field work or lab experiments). Alternatively, if the modeller possesses some observations of the system inputs and outputs, then the parameter values can be inferred by finding the values that makes the model best fit the available observations (so called 'calibration' process). In all cases, determining the 'right' parameter values is often difficult and time consuming, and leads to results that may be uncertain if the available data are sparse or affected by large measurement errors. In this Notebook we will use Global Sensitivity Analysis (GSA) to determine if any of the parameters has a negligible influence on the model output. If this is the case, then we do not need to invest too much in the estimation of the uninfluential parameters and we can focus all our efforts on the smaller set of influential parameters, thus saving time and money to build our model. \n",
     "\n",
-    "# But what is a hydrological model?\n",
-    "Imagine that we want to simulate the natural water flows draining into a river. Knowing the amount of rainfall that has fallen in the river drainage area, i.e. catchment, we can estimate how much of the rainwater flows over (surface flow) and under (subsurface flow) the land surface and finally reach the river. \n",
+    "## A hydrological example\n",
+    "In this Notebook we will apply GSA to a hydrological model. For the sake of illustration, we will use a very simple model with only five parameters. But what is a hydrological model? Imagine that we want to predict the water flows that drain into a river from the amount of rainfall that has fallen in the river drainage area, i.e. catchment, we can estimate how much of the rainwater flows over (surface flow) and under (subsurface flow) the land surface and finally reach the river. \n",
     "\n",
     "For this purpose, we can use a hydrological model. A hydrological model is a mathematical model (set of equations) describing the hydrological processes that occur in a catchment as a function of various parameters. These model parameters describe the hydrological characteristics of the catchment, such as the climate and soil characteristics, ultimately enabling the estimation of the river flow at selected river sections.\n",
     "\n",
