--- a/Hydrological_model/GSA_Hydrological_Model.ipynb
+++ b/Hydrological_model/GSA_Hydrological_Model.ipynb
@@ -8,47 +8,29 @@
     "**How to use a Jupyter Notebook**: You can execute the blocks of code one at the time by placing the mouse in the grey box and pressing shift + enter - an asterisk will appear in the brackets at the top left of the box while the code is being exectued (this may take few seconds) and turns into a number when the eection is over. Alternatively, you can run all the code in the Notebook in a single step by clicking on the menu Cell -> Run All.*\n",
     "\n",
     "# What are the most important parameters in a mathematical model?\n",
-    "Mathematical models often encompass a large number of parameters. The value of these parameters for a particular application are decided by the modeller based on information about the quantities that the parameters represent (for example, measurements from field work or lab experiments). Alternatively, if the modeller possesses some observations of the system inputs and outputs, then the parameter values can be inferred by finding the values that makes the model best fit the available observations (so called 'calibration' process). In all cases, determining the 'right' parameter values is often difficult and time consuming, and leads to results that may be uncertain if the available data are sparse or affected by large measurement errors. In this Notebook we will use Global Sensitivity Analysis (GSA) to determine if any of the parameters has a negligible influence on the model output. If this is the case, then we do not need to invest too much in the estimation of the uninfluential parameters and we can focus all our efforts on the smaller set of influential parameters, thus saving time and money to build our model. \n",
+    "Mathematical models often encompass a large number of parameters. The value of these parameters for a particular application are decided by the modeller based on information about the quantities that the parameters represent (for example, measurements from field work or lab experiments). Alternatively, if the modeller possesses some measurements of the system inputs and outputs, then the parameter values can be inferred by finding the values that makes the model best fit those measurements (this is called model 'calibration'). In both cases, determining the 'right' parameter values is often difficult and time consuming, as it may require acquiring and handling a lot of data and/or using of a lot of computing power (if the model is calibrated using a computer algorithm). And yet, parameter estimates may still be uncertain if the available data are sparse or affected by large measurement errors. In this Notebook we see how Global Sensitivity Analysis (GSA) can help in this context. \n",
+    "Specifically, we will show how GSA can determine if any of the model parameters have negligible influence on the output we are interested in predicting (or for which we have measurements). If this is the case, then we do not need to invest too much efforts in the estimation of these uninfluential parameters, and we can focus instead on the smaller set of influential parameters, thus saving time while achieving better results. Indeed applications of GSA have shown that the set of parameters controlling a particular output variable is often quite small, although different sets of parameters may control different outputs. Also, if GSA shows that some parameters are uninfluential for all model outputs, then this may mean that the model is unnecessarily complex and give the modeller indications on how to simplify it. \n",
     "\n",
     "## A hydrological example\n",
-    "In this Notebook we will apply GSA to a hydrological model. For the sake of illustration, we will use a very simple model with only five parameters. But what is a hydrological model? Imagine that we want to predict the water flows that drain into a river from the amount of rainfall that has fallen in the river drainage area, i.e. catchment, we can estimate how much of the rainwater flows over (surface flow) and under (subsurface flow) the land surface and finally reach the river. \n",
-    "\n",
-    "For this purpose, we can use a hydrological model. A hydrological model is a mathematical model (set of equations) describing the hydrological processes that occur in a catchment as a function of various parameters. These model parameters describe the hydrological characteristics of the catchment, such as the climate and soil characteristics, ultimately enabling the estimation of the river flow at selected river sections.\n",
-    "\n",
-    "## Hydrological processes in a watershed\n",
-    "This animated image represents the main hydrological processes that occur in a watershed. \n",
+    "In this Notebook we will apply GSA to determine the influential and uninfluential parameters of a hydrological model. For the sake of illustration, we will use a very simple model with only five parameters. But what is a hydrological model in the first place? Imagine that we want to predict the water flows that drain into a river from the amount of rainfall that has fallen in the river catchment area. For this purpose, we can use a hydrological model, which describes the hydrological processes occuring in the catchment (such as evaporation, surface and underground flows, etc.) via a set of equations. These equations encompass various parameters, describing the properties of the catchment, such as the vegetation and soil characteristics.\n",
     "\n",
     "<left><img src=\"util/rain_runoff_diagram8.gif\" width=\"700px\">\n",
-    "    \n",
-    "## Diagram of the hydrological model\n",
-    "\n",
-    "This is how the hydrological model represents the hydrological processes to finally obtain the river flow. \n",
-    "\n",
+    "Above: schematic of the main hydrological processes occuring in a catchment. Below: schematic of how the processes are represented in a hydrological model to finally predict the river flow.\n",
     "<left><img src=\"util/hymod_diagram_simple4.gif\" width=\"1000px\">\n",
     "\n",
-    "## Model parameters\n",
-    "To represent the hydrological processes the model use mathematical equations that are as a function of several parameters.\n",
-    "\n",
-    "In our simple hydrological model we have 5 parameters (the model is a simplified adaptation of the HyMOD model *(Ref. 1)*):\n",
+    "Our simple hydrological model (which is an adaptation of the HyMOD model *(Ref. 1)*) has 5 parameters:\n",
     "- Soil storage capacity (mm): capacity of the soil to store rainwater\n",
     "- Evaporation ratio: proportion of rainwater that is evaporated\n",
-    "- Infiltration rate: proportion of effective rain that actually infiltrates into the soil\n",
-    "- Travel time - surface flow (days): average time for the surface water to reach the river \n",
-    "- Travel time - underground flow (days): average time for the underground water to reach the river\n",
+    "- Infiltration ratio: proportion of rainwater that infiltrates into the soil\n",
+    "- Travel time of surface flow (days): average time for the surface water to reach the river \n",
+    "- Travel time of underground flow (days): average time for the underground water to reach the river\n",
     "\n",
     "<left><img src=\"util/rain_runoff_param.png\" width=\"500px\">\n",
     "    \n",
-    "To tailor a hydrological model to a particular watershed we need to know the value of the model parameters. Usually the value of the model parameters are unknown and ideally, to obtain a good representation of the hydrological processes occuring in the watershed, we should measure their values in-situ. However, this data is generally difficult and expensive to measure. \n",
+    "FP: I REMOVED THIS PARAGRAPH BECAUSE IT COULD BE VERY CONTROVERSIAL: WITH A LUMPED HYDROLOGICAL MODEL THE PARAMETERS ARE EFFECTIVE PARAMETERS SO THEY DO NOT HAVE ANY PHYSICAL COUNTERPART AND CANNOT BE MEASURED IN-SITU, ONLY CALIBRATED FROM DATA! ALSO I WOULD NOT DISCUSS CALIBRATION IN GENERAL TERMS HERE BUT RATHER ANTICIPATE THE ISSUE IN THE INTRODUCTION (WHERE WE MOTIVATE THE READERS) AND HERE GO STRAIGHT INTO THE PRACTICAL AND HANDS-ON PART. \n",
+    "## Model calibration\n",
     "\n",
-    "Now imagine that have a very limited budget and we cannot measure the paramater values in-situ. In this case, when the parameter values are not available, model calibration is required.\n",
-    "    \n",
-    "## Calibration of the model parameters\n",
-    "\n",
-    "Model calibration is the process of adjusting the model parameters to obtain a representation of the catchment under study that satisfies a pre-agreed criteria. Normally, calibration of a hydrological model aims to improve the fit of the simulated river flow to observed river flow and involves running the model many times under different combinations of the parameter values, until a combination is found that minimise the differences between simulated and observed flows. The process of calibration can be very time consuming and computationally intensive.\n",
-    "\n",
-    "## One-at-a-time calibration\n",
-    "\n",
-    "To have a better idea of that model calibration is let's try to calibrate the model manually, that is, changing the parameter values one-at-a-time and looking at the effects induced in the model resutls. Try to visually fit the simulated river flow to the observed one and reduce the calibration error by playing only with the parameters. The error is the sum of the absolute daily differeces between the simulated and the observed river flows."
+    "Now imagine we have a time series of measurements of daily rainfall and river flow for a particular catchment. We can use these data to calibrate our model, that is, to find the parameter values that make the model best fit the data. The simplest way to do this is by changing the parameter values one-at-a-time and looking at how this changes the model predictions. Can we fit the predicted river flows to the measured ones?"
    ]
   },
   {
@@ -86,9 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see the complexity of one-at-a-time calibration: it is difficult to find the combination of parameters that optimally fits the simulated river flow to the observed one.\n",
+    "The interactive plot above also reports a quantitative indicator of the model fit-to-the data, or better, lack of fit: the 'error'. This is the sum of the absolute differences between predicted and measured river flows. Ideally we would like the error to be zero; more realistically, we would want to reduce it as much as possible. However, finding a good set of parameters by varying each of them one-at-a-time is not easy.\n",
     "\n",
-    "In order to facilitate the search for an optimal parameter combination we can apply Global Sensitivity Analysis (GSA). In this case, GSA can help to identify what parameters in our model have a relevant influence in the model results and what parameters can be neglected in the process of calibration.\n",
+    "The search of a good parameters combination would be easier if we could focus on fewer of them. ,  we can apply Global Sensitivity Analysis (GSA). In this case, GSA can help to identify what parameters in our model have a relevant influence in the model results and what parameters can be neglected in the process of calibration.\n",
     "\n",
     "## Plot sensitivity indices and identify non-influential parameters\n",
     "By applying GSA *(Ref. 2)* we obtain a sensitivity index for each model parameter that measures the relative influence of the parameter on the calibration error. Being the influence lower as the sensitivity index decreases. With GSA we can also obtain an influence threshold value for the sensitivity index. If the index of a parameter is below the threshold, then the parameter can be considered as uninfluential *(Ref. 3)*. Now run the cell below to obtain the sensivity indices and the influence threshold (black dotted line)."
