--- a/Hydrological_model/GSA_Hydrological_Model.ipynb
+++ b/Hydrological_model/GSA_Hydrological_Model.ipynb
@@ -28,7 +28,7 @@
     "<left><img src=\"util/rain_runoff_param.png\" width=\"500px\">\n",
     "    \n",
     "FP: I REMOVED THIS PARAGRAPH BECAUSE IT COULD BE VERY CONTROVERSIAL: WITH A LUMPED HYDROLOGICAL MODEL THE PARAMETERS ARE EFFECTIVE PARAMETERS SO THEY DO NOT HAVE ANY PHYSICAL COUNTERPART AND CANNOT BE MEASURED IN-SITU, ONLY CALIBRATED FROM DATA! ALSO I WOULD NOT DISCUSS CALIBRATION IN GENERAL TERMS HERE BUT RATHER ANTICIPATE THE ISSUE IN THE INTRODUCTION (WHERE WE MOTIVATE THE READERS) AND HERE GO STRAIGHT INTO THE PRACTICAL AND HANDS-ON PART. \n",
-    "## Model calibration\n",
+    "## Estimating the model parameters\n",
     "\n",
     "Now imagine we have a time series of measurements of daily rainfall and river flow for a particular catchment. We can use these data to calibrate our model, that is, to find the parameter values that make the model best fit the data. The simplest way to do this is by changing the parameter values one-at-a-time and looking at how this changes the model predictions. Can we fit the predicted river flows to the measured ones?"
    ]
@@ -68,12 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The interactive plot above also reports a quantitative indicator of the model fit-to-the data, or better, lack of fit: the 'error'. This is the sum of the absolute differences between predicted and measured river flows. Ideally we would like the error to be zero; more realistically, we would want to reduce it as much as possible. However, finding a good set of parameters by varying each of them one-at-a-time is not easy.\n",
-    "\n",
-    "The search of a good parameters combination would be easier if we could focus on fewer of them. ,  we can apply Global Sensitivity Analysis (GSA). In this case, GSA can help to identify what parameters in our model have a relevant influence in the model results and what parameters can be neglected in the process of calibration.\n",
-    "\n",
-    "## Plot sensitivity indices and identify non-influential parameters\n",
-    "By applying GSA *(Ref. 2)* we obtain a sensitivity index for each model parameter that measures the relative influence of the parameter on the calibration error. Being the influence lower as the sensitivity index decreases. With GSA we can also obtain an influence threshold value for the sensitivity index. If the index of a parameter is below the threshold, then the parameter can be considered as uninfluential *(Ref. 3)*. Now run the cell below to obtain the sensivity indices and the influence threshold (black dotted line)."
+    "The interactive plot above also reports a quantitative indicator of the model fit-to-the data, or better, lack of fit: the calibration error. This is the sum of the absolute differences between predicted and measured river flows over the whole time series. Ideally we would like the error to be zero; more realistically, we would want to reduce it as much as possible. However, finding a good set of parameters by varying each of them one-at-a-time is time consuming.\n",
+    "## Finding influential parameters by GSA\n",
+    "The search of a good parameters combination would be easier if we could focus on fewer of them, the ones that mostly influence the model predictions. To identify such parameters, we can apply Global Sensitivity Analysis (GSA). Here we use one particular GSA method, PAWN *(Ref. 2)*. It provides a sensitivity index for each model parameter. The index measures the relative influence of that parameter on the calibration error: the lower the index, the smaller the influence. The method also provides a threshold value to identify uninfluential parameters: if the index of a parameter is below the threshold, then the parameter can be considered uninfluential. Now run the cell below to obtain the sensivity indices and the influence threshold (black dotted line). FP: DOES THE PLOT BELOW NEED TO BE GENERATED IF IT IS NOT INTERACTIVE? SHOULD WE JUST UPLOAD A STATIC FIGURE INSTEAD?"
    ]
   },
   {
@@ -110,8 +107,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's try to calibrate the model parameters again...\n",
-    "Now try to calibrate the hydrological model, i.e. minimize the calibration error, but now neglecting the parameters that according to GSA are not influential. We consider that we get a **good calibration when error <50 ML** and **very good when error <35 ML**. Are you able to get a **good** calibration by only **changing the value of 2 parameters**? and a **very good** calbration by only **changing the value of 3 parameters**?"
+    "## Estimating the model parameters, again...\n",
+    "Now try to calibrate the hydrological model but only focusing on the parameters that, according to GSA, are influential. For your reference, consider that a **calibration error <50 ML** is a good result, and an **error <35 ML** is very good. Can you get a **good** calibration by only **changing the value of 2 parameters**? and a **very good** calibration by only **changing 3 parameters**?"
    ]
   },
   {
@@ -146,7 +143,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you need additional help to find an optimal combination of parameter values we can use again GSA to compute multiple combinations of the influential parameters (dots) and obtain their corresponding calibration error (dot color). Note that the lower errors correspond to dark blue dots."
+    "FP: SAME QUESTION AS ABOVE, WHY DO WE NEED TO GENERATE THE PLOT? \n"
+"Another piece of information provided by GSA is about the possible interactions between the model parameters. For example, the coloured scatter plots below are a qualitative tool to analyse such interactions. Each point in the plots corresponds to a possible parameters combination (you can read the parameter values on the horizontal and vertical axes). The color tells us the calibration error of the model when run with that combination of parameters. FP: MORE BROADLY I HAVE A PROBLEM WITH THIS PLOT, IN THAT IT SUGGESTS TO ME THAT I CAN SIMPLY LOOK HERE AND FIND A POINT WITH VERY DARK COLOR, AND THAT'S THE OPTIMAL SOLUTION, IN OTHER WORDS, CALIBRATION BY BRUTE FORCE. WITH A MODEL SO FAST TO RUN THAT IS INDEED A REASONABLY APPROACH, BUT THEN IT MAY SUGGEST THAT THE GSA ABOVE IS USELESS... SO I AM NOT SURE IT IS A GOOD IDEA TO SHOW IT?"
    ]
   },
   {
