--- a/Predator_prey_model/GSA_predator_prey_model.ipynb
+++ b/Predator_prey_model/GSA_predator_prey_model.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "<left><img src=\"util/screening_figure.png\" width=\"600px\">\n",
     "    \n",
-    "We observe that two of the parameters, *Predator initial population* and *Prey initial population*, have a low sensitivity index, being close or even below the influence threshold. Therefore we can neglect these parameters because they have a low influence in the model results.\n",
+    "We observe that two of the parameters, *Predator initial population* and *Prey initial population* are below the influence threshold. Therefore we can neglect these parameters because they have a low influence in the model results.\n",
     "## Investigate interactions between model parameters\n",
     "Now only considering the influential parameters (*Predator attack rate*, *Predator efficiency ratio* and *Predator death rate*) let's try to understand the interactions between to facilitate the search of an optimal combination of the values of these parameters (a combination that minimizes the equilibrium error). Using again GSA we plot one input against the other, coloured by the value taken by the model output (equilibrium error).\n",
     "\n",
